# spackage_conv

./: README.md  file_list.txt  source.sh
binaries/: app_convolution.aplx  app_frame_izhikevich.aplx  app_frame_izhikevich_stdp.aplx  app_frame_izhikevich_stdp_sp.aplx  app_frame_izhikevich_tts.aplx  app_frame_lif.aplx  app_frame_lif_32.aplx  app_frame_lif_cond.aplx  app_frame_lif_cond_stdp.aplx  app_frame_lif_cond_stdp_sp.aplx  app_frame_lif_nef_1d.aplx  app_frame_lif_stdp.aplx  app_frame_lif_stdp_sp.aplx  app_frame_nef_out_1d.aplx  app_frame_nef_out_2d.aplx  app_frame_spike_source.aplx  app_frame_spike_source_poisson.aplx  app_proxy.aplx  automatic.ybug
binary_files_generation/: generate_convolution_block.py  generate_input_spikes.py  neuron_writer.py  routing_patcher.py  synapse_writer.py  ybug.cfg
examples/: IF_cond_exp.py  IF_curr_exp.py  IZK_curr_exp.py  __init__.py  cochlea_example.py  convolution.py  convolution1.py  convolution_neuron.py  if_cond.sqlite  model_creation_example.py  retina_example.py  stdp_example.py  synfire_chain_IZK.py  synfire_chain_lif.py  va_benchmark.py
examples/results/: IF_cond_exp_spiNNaker.v  IF_curr_exp_spiNNaker.v
nengo_spinnaker_interface/: __init__.py  compile_nengo_model.py  nengo-cl-spinnaker  optsparse.py  packet.py  spinn.py  viewer_1d.py  viewer_2d.py
nengo_spinnaker_interface/examples/: nengo_communication_channel.py  nengo_integrator.py  nengo_robot_example.py  nengo_sparse_test.py  nengo_square.py
pacman/: __init__.py  dao.py  pacman.cfg  splitter.py
pacman/sql/: model_library.db  model_library.sql  queries.cfg
pyNN.spiNNaker/: __init__.py  connectors.py  simulator.py
pyNN.spiNNaker/standardmodels/: cells.py  create_neural_model.py  model_templates.py
src/app_convolution/inc/: config.h  dma.h  model_convolution.h  model_general.h
src/app_convolution/src/: comms.c  config.c  dma.c  main.c  model_convolution.c
src/app_dump/src/: main.c
src/app_frame/src/: main.c  model_lif.c  model_lif_cond.c
src/app_frame_nef/inc/: model_lif_nef.h
src/app_proxy/src/: main.c
src/app_spike_source/inc/: model_spike_source_array.h
src/app_spike_source/src/: main.c  model_spike_source_array.c
src/spin1_api/examples/: run_simple  simple.c
src/spin1_api/src/: spin1_api.c  spin1_api.h  spin1_api_params.h  spinnaker.gas
tools/spikeserver/: compile.sh  configure.ac
tools/spikeserver/src/: Makefile.am  RTtimer.cpp  RTtimer.h  SDPmsg.h  TimerSignalHandler.cpp  TimerSignalHandler.h  defines.h  destinationCore.h  globals.cpp  globals.h  help.cpp  help.h  inputThread.cpp  inputThread.h  sendPacket.h  sharedQueue.cpp  sharedQueue.h  sigHandler.cpp  sigHandler.h  spikeChannel.cpp  spikeChannel.h  spikeReceiver.cpp  spikeReceiver.h  spikeserver.cpp  spikeserver_7.cpp.orig  spinnpacket.h
tools/visualiser/: chiptemp3x48.ini  chiptemp4.ini  chiptemp48.ini  cpuutil3x48.ini  cpuutil4.ini  cpuutil48.ini  heatmap3x48.ini  heatmap4.ini  heatmap48.ini  integratorfg.ini  linkcheck3x48.ini  linkcheck4.ini  linkcheck48.ini  mar12raster.ini  rateplot.ini  rateplotlegacy.ini  readme.txt  retina.ini  retina2.ini  retina_32_128pc.ini  retina_full_128.ini  sevilleretina.ini  spikervc.ini  template.ini  visparam.ini  visualiser.cpp
