noinst_PROGRAMS = spikeserver
spikeserver_SOURCES = defines.h globals.cpp globals.h help.cpp help.h inputThread.cpp inputThread.h RTtimer.cpp RTtimer.h SDPmsg.h sendPacket.h sharedQueue.cpp sharedQueue.h sigHandler.cpp sigHandler.h spikeChannel.cpp spikeChannel.h spikeReceiver.cpp spikeReceiver.h spikeserver.cpp spinnpacket.h TimerSignalHandler.cpp TimerSignalHandler.h
spikeserver_LDADD = $(PTHREADLIB) $(RTLIB) $(MLIB)

